--- a/src/index.html
+++ b/src/index.html
@@ -353,10 +353,10 @@
       <div class="lunbo1">
         <ul>
           <li><a href=""><img src="https://game.gtimg.cn/images/daojushop/uploads/ad/202006/20200603104908_393858.jpg" alt=""></a><p>和平精英天降潮鸭公仔</p></li>
-          <li><a href=""><img src="https://game.gtimg.cn/images/daojushop/uploads/ad/202005/20200529122255_319729.jpg" alt=""></a><p>和平精英天降潮鸭公仔</p></li>
-          <li><a href=""><img src="https://game.gtimg.cn/images/daojushop/uploads/ad/202005/20200527162809_670776.jpg" alt=""></a><p>和平精英天降潮鸭公仔</p></li>
-          <li><a href=""><img src="https://game.gtimg.cn/images/daojushop/uploads/ad/202003/20200324163348_557757.jpg" alt=""></a><p>和平精英天降潮鸭公仔</p></li>
-          <li><a href=""><img src="https://game.gtimg.cn/images/daojushop/uploads/ad/202006/20200602154838_549189.jpg" alt=""></a><p>和平精英天降潮鸭公仔</p></li>
+          <li><a href=""><img src="https://game.gtimg.cn/images/daojushop/uploads/ad/202005/20200529122255_319729.jpg" alt=""></a><p>宇航员2020</p></li>
+          <li><a href=""><img src="https://game.gtimg.cn/images/daojushop/uploads/ad/202005/20200527162809_670776.jpg" alt=""></a><p>天刀五周年庆</p></li>
+          <li><a href=""><img src="https://game.gtimg.cn/images/daojushop/uploads/ad/202003/20200324163348_557757.jpg" alt=""></a><p>炫舞时代星光宝盒</p></li>
+          <li><a href=""><img src="https://game.gtimg.cn/images/daojushop/uploads/ad/202006/20200602154838_549189.jpg" alt=""></a><p>CF周边魔力赏</p></li>
         </ul>
         <ol>
           <li class="active"></li>
@@ -365,9 +365,54 @@
           <li></li>
           <li></li>
         </ol>
+        <a href="javascript:;" class="left_fake">&lt;</a>
+        <a href="javascript:;" class="right_fake">&gt;</a>
+      </div>
+      <!-- 右侧 -->
+      <div class="fr right_lunbo">  
+        <div class="lunbo_top">
+          <!-- 登录 -->
+          <div class="lunbo_t1">
+            <div class="t1_box">
+              <img src="//js01.daoju.qq.com/common/images/channel/revision/default.gif" alt="">
+              <p class="gray">您还未登录哦，<a href="javascript:LoginManager.login();" class="blue">立即登录</a>购买超值商品！</p>
+            </div>
+          </div>
+          <!-- 推荐游戏 -->
+          <div class="lunbo_t2">
+            <h5>推荐游戏</h5>
+            <ul>
+              <li><a href=""><img src="//js01.daoju.qq.com/common/images/mall/game/cf.jpg" alt=""><span>穿越火线</span></a></li>
+              <li><a href=""><img src="//js01.daoju.qq.com/common/images/mall/game/cf.jpg" alt=""><span>穿越火线</span></a></li>
+              <li><a href=""><img src="//js01.daoju.qq.com/common/images/mall/game/cf.jpg" alt=""><span>穿越火线</span></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="lunbo_button">
+          <div class="lunbo_bu1">
+            <h5 style="float: left;">公告</h5>
+            <a class="" style="float: right;width: 45px;color: #666;cursor: pointer;" href="/mall/notice.shtml" target="_blank">更多</a>
+          </div>
+          <div class="lunbo_bu2">
+            <li><a href="//daoju.qq.com/mall/notice.shtml?notice=490" target="_blank">关于穿越火线改名卡道具下架通知</a><i>06/03</i></li>
+				    <li><a href="//daoju.qq.com/mall/notice.shtml?notice=489" target="_blank">LOL商城部分炫彩原价购买退款说明</a><i>05/09</i></li>
+				    <li><a href="//daoju.qq.com/mall/notice.shtml?notice=486" target="_blank">支付异常公告</a><i>01/03</i></li>
+				    <li><a href="//daoju.qq.com/mall/notice.shtml?notice=485" target="_blank">天刀青龙秘宝活动无法拉取角色信息公告</a><i>12/09</i></li>
+          </div>
+        </div>
       </div>
     </div>
+    <!-- 商品渲染1 -->
+    <div class="wrap">
+      <!-- 热卖推荐 -->
+      <div class="fl sale">
 
+      </div>
+      <!-- 每日惊喜 -->
+      <div class="fr seckill">
+
+      </div>
+    </div>
   </body>
   <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://localhost/phpJop/daojucheng/src/script/index.js"></script>
