--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,10 @@
           <i>|</i>
           <div>
             <div class="login fr">
-              您还未登录，请<a href="login.html">登录</a>
+              您还未登录，请<a href="" class="login_a">登录</a>
+              <!-- <div class="cap"></div>
+              <div class="register"> -->
+
             </div>
             <div style="display: none;">
               <p>
@@ -58,6 +61,9 @@
             <a href="login.html">请登录</a> -->
       </div>
     </div>
+    <!-- 登录 -->
+    <div class="cap"></div>
+    <div class="register">
     <!-- 搜索框 -->
     <div class="search">
       <div class="wrap clearfix">
@@ -195,7 +201,7 @@
                       >CODOL使命召唤Online</a
                     >
                     <a title="QQ三国" href="//daoju.qq.com/sg/">QQ三国</a>
-                    <a title="英雄联盟" href="//daoju.qq.com/lol/">英雄联盟</a>
+                    <a title="英雄联盟" href="list.html">英雄联盟</a>
                   </div>
                   <div class="dev">
                     <a title="穿越火线" href="//daoju.qq.com/cf/">穿越火线</a>
@@ -349,8 +355,8 @@
       </div>
     </div>
     <!-- 轮播图 -->
-    <div class="wrap lunbo">
-      <div class="lunbo1">
+    <div class="wrap  lunbo">
+      <div class="lunbo1 mb20">
         <ul>
           <li><a href=""><img src="https://game.gtimg.cn/images/daojushop/uploads/ad/202006/20200603104908_393858.jpg" alt=""></a><p>和平精英天降潮鸭公仔</p></li>
           <li><a href=""><img src="https://game.gtimg.cn/images/daojushop/uploads/ad/202005/20200529122255_319729.jpg" alt=""></a><p>宇航员2020</p></li>
@@ -402,15 +408,294 @@
         </div>
       </div>
     </div>
-    <!-- 商品渲染1 -->
-    <div class="wrap">
-      <!-- 热卖推荐 -->
-      <div class="fl sale">
-
+    <!-- 热卖推荐 -->
+    <div class="wrap ">
+      <div class="fl mb20 sale">
+        <!-- 标题 -->
+        <div class="title_t sale_t">
+          
+          <s class="fl i_sp "></s>
+          <em>热卖推荐</em>
+        </div>
+        <!-- 内容 -->
+        <div class="sale_bu">
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-78016-undefined.jpg?_t=1590493638" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p>
+                <b>[英雄联盟]</b>
+                <a href="">宇航员 波比</a>
+              </p>
+              <p>
+                QB价：
+                <b style="color:#f74a4a">79.00 QB</b>
+              </p>
+              <p>热卖推荐</p>
+              <a href="" class="sale_btn">立即抢购</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-78016-undefined.jpg?_t=1590493638" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p>
+                <b>[英雄联盟]</b>
+                <a href="">宇航员 波比</a>
+              </p>
+              <p>
+                QB价：
+                <b style="color:#f74a4a">79.00 QB</b>
+              </p>
+              <p>热卖推荐</p>
+              <a href="" class="sale_btn">立即抢购</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-78016-undefined.jpg?_t=1590493638" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p>
+                <b>[英雄联盟]</b>
+                <a href="">宇航员 波比</a>
+              </p>
+              <p>
+                QB价：
+                <b style="color:#f74a4a">79.00 QB</b>
+              </p>
+              <p>热卖推荐</p>
+              <a href="" class="sale_btn">立即抢购</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-78016-undefined.jpg?_t=1590493638" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p>
+                <b>[英雄联盟]</b>
+                <a href="">宇航员 波比</a>
+              </p>
+              <p>
+                QB价：
+                <b style="color:#f74a4a">79.00 QB</b>
+              </p>
+              <p>热卖推荐</p>
+              <a href="" class="sale_btn">立即抢购</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-78016-undefined.jpg?_t=1590493638" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p>
+                <b>[英雄联盟]</b>
+                <a href="">宇航员 波比</a>
+              </p>
+              <p>
+                QB价：
+                <b style="color:#f74a4a">79.00 QB</b>
+              </p>
+              <p>热卖推荐</p>
+              <a href="" class="sale_btn">立即抢购</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-78016-undefined.jpg?_t=1590493638" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p>
+                <b>[英雄联盟]</b>
+                <a href="">宇航员 波比</a>
+              </p>
+              <p>
+                QB价：
+                <b style="color:#f74a4a">79.00 QB</b>
+              </p>
+              <p>热卖推荐</p>
+              <a href="" class="sale_btn">立即抢购</a>
+            </dd>
+          </dl>
+        </div>
+        
       </div>
       <!-- 每日惊喜 -->
-      <div class="fr seckill">
-
+      <div class="fr mb20 w230 seckill">
+        <!-- 标题 -->
+        <div class="title_t seckill_t">
+          <s class="f1 i_sp"></s>
+          <em>每日惊喜</em>
+        </div>
+        <!-- 内容 -->
+        <div class="seckill_bu">
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/gameshop/speed/images/packageGoods/220-188.jpg" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p style="white-space:nowrap;overflow:hidden;text-overflow:ellipsis;"><b>[飞车]</b>周末特惠礼包</p>
+              <p style="color: #f74a4a;">秒杀价：<b>4.25QB</b></p>
+              <p>
+                <span  end="2020-06-08 23:59:59">
+                  <em class="num_bg">0</em>天
+                  <em class="num_bg">13</em>时
+                  <em class="num_bg">30</em>分
+                  <em class="num_bg">37</em>秒
+                </span>
+              </p>
+              <a href="" class="seckill_btn">查看详情</a>
+            </dd>
+            <dd class="bg_sp seckill_djms">独家秒杀</dd>
+          </dl>
+        </div>
+      </div>
+    </div>
+    <!-- 猜你喜欢 -->
+    <div class="wrap">
+      <div class="w950 fl mb20 love">
+        <!-- 标题 -->
+        <div class="title_t love_t">
+          <s class="fl i_sp"></s>
+          <em>猜你喜欢</em>
+          <span>|</span>
+          <a href="">换一换></a>
+        </div>
+        <!-- 内容 -->
+        <div class="love_bu"> 
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-21018-.jpg?_t=1571898646" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p>
+                <a href="">
+                  <b>[英雄联盟]</b>
+                  魅惑女巫 厄运小姐
+                </a>
+              </p>
+              <p style="color: #f74a4a;">
+                商城价：
+                <b>79.00 QB</b>
+              </p>
+            </dd>
+          </dl>
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-21018-.jpg?_t=1571898646" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p>
+                <a href="">
+                  <b>[英雄联盟]</b>
+                  魅惑女巫 厄运小姐
+                </a>
+              </p>
+              <p style="color: #f74a4a;">
+                商城价：
+                <b>79.00 QB</b>
+              </p>
+            </dd>
+          </dl>
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-21018-.jpg?_t=1571898646" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p>
+                <a href="">
+                  <b>[英雄联盟]</b>
+                  魅惑女巫 厄运小姐
+                </a>
+              </p>
+              <p style="color: #f74a4a;">
+                商城价：
+                <b>79.00 QB</b>
+              </p>
+            </dd>
+          </dl>
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-21018-.jpg?_t=1571898646" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p>
+                <a href="">
+                  <b>[英雄联盟]</b>
+                  魅惑女巫 厄运小姐
+                </a>
+              </p>
+              <p style="color: #f74a4a;">
+                商城价：
+                <b>79.00 QB</b>
+              </p>
+            </dd>
+          </dl>
+          <dl>
+            <dt>
+              <a href="">
+                <img src="//ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-21018-.jpg?_t=1571898646" alt="">
+              </a>
+            </dt>
+            <dd>
+              <p>
+                <a href="">
+                  <b>[英雄联盟]</b>
+                  魅惑女巫 厄运小姐
+                </a>
+              </p>
+              <p style="color: #f74a4a;">
+                商城价：
+                <b>79.00 QB</b>
+              </p>
+            </dd>
+          </dl>
+        </div>
+      </div>
+      <!-- 每日签到 -->
+      <div class="w230 fr ">
+        <div class="sign">
+          <div class="title_t sign_t">
+            <s class="fl i_sp"></s>
+            <em>每日签到</em>
+          </div>
+          <div class="sign_bn">
+            <a href="">
+              <s class="i_sp"></s>
+              我要签到
+            </a>
+            <div class="sign_p">
+              <p>今日签到可获得5个聚豆</p>
+              <p>下载手机道聚城最高可获得40聚豆</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
